refactor(server): read the commit log with JGit's own parsing and a blob-free file count
The subject and body come from RevCommit.getShortMessage and getFullMessage, which decode with
JGit's charset fallback; the order is TOPO_KEEP_BRANCH_TOGETHER, the strategy that matches
git log --topo-order. Per-commit line counts loaded every blob of every commit, unbounded by
anything but the item cap; a recursive tree walk counts changed paths instead. The prompts
drop the truncation instruction, which a PARTIAL record never lets a model see.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>